Fix Alignment issues in add employee form

--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,9 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.fieldLabel{
+  display: block;
+  padding-left: 5px;
+  text-align: left
+}
